# integracao-portal-lcq

./: README.md  pyproject.toml  requirements.txt
src/: app.py
src/content/: __init__.py
src/content/login/: index.py
src/content/main/: index.py
src/core/: CORE.md
src/core/auth/: AUTH.md  index.py
src/core/clean_xl/: CLEAN_EXCEL.md  index.py
src/core/clean_xl/steps/: __init__.py
src/core/clean_xl/steps/I/: HEADER.md
src/core/clean_xl/steps/II/: CONCATENATE.md  index.py
src/core/clean_xl/steps/III/: REQUIRED_COLUMNS.md  index.py
src/core/clean_xl/steps/IV/: CLEAN_DATA.md  index.py
src/core/insert_df/: INSERT_DATAFRAME.md  index.py
src/core/insert_df/database_integration/: DATABASE_INTEGRATION.md  index.py
src/utils/clean_xl/: CLEAN_EXCEL.md  index.py
src/utils/clean_xl/steps/: __init__.py
src/utils/clean_xl/steps/I/: HEADER.md  index.py
src/utils/clean_xl/steps/II/: CONCATENATE.md  index.py
src/utils/clean_xl/steps/III/: REQUIRED_COLUMNS.md
src/utils/clean_xl/steps/IV/: CLEAN_DATA.md
