[project]
name = "integracao-portal-lcq"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "lucasxaviervieira", email = "lucasdavid.xavier@gmail.com"},
]
dependencies = [
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "streamlit>=1.40.2",
    "ldap3>=2.9.1",
    "python-dotenv>=1.0.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
